# mdtop

./: Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yaml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/development/: index.html
0.0.1/reference/: index.html
0.0.1/reference/SUMMARY/: index.html
0.0.1/scripts/: gen_ref_pages.py
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/development/: index.html
0.0.3/reference/: index.html
0.0.3/reference/SUMMARY/: index.html
0.0.3/reference/_io/: index.html
0.0.3/reference/_io/openeye/: index.html
0.0.3/reference/_io/openmm/: index.html
0.0.3/reference/_io/rdkit/: index.html
devtools/envs/: base.yaml
docs/: development.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/_io/: index.html
latest/reference/_io/openeye/: index.html
latest/reference/_io/openmm/: index.html
latest/reference/_io/rdkit/: index.html
latest/search/: search_index.json
mdtop/: __init__.py  _const.py  _sel.py  _top.py  _utils.py
mdtop/_io/: __init__.py  openeye.py  openmm.py  rdkit.py
mdtop/data/: README.md
mdtop/tests/: conftest.py  test_sel.py  test_top.py  test_utils.py
