[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtop"
description = "A simple package for storing topological information about a system to simulate."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mdtop*"]

[tool.setuptools.package-data]
"mdtop" = ["data/**/*"]

[tool.setuptools_scm]

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*","mdtop/_io/openeye.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
